Transfer service edit changes to services

--- a/src/site/services.njk
+++ b/src/site/services.njk
@@ -207,6 +207,53 @@ metaDescription: 'Accredited Transformational Coach helping you overcome stress,
                 </div>
             </div>
             <hr class="half-width-hr d-md-none">
+                        <div class="coaching-package-item">
+                <div class="signature-includes">
+                    <h2 class="sect-title fw-n signature-title italic">
+                        Shift <span class="small services-small">in person intensive</span>
+                    </h2>
+                    <p class="normal-text coaching-package-intro">
+                        If you want incredible accelerated progress and are ready to make a leap then meet SHIFT.  This unique program includes a face to face intensive with yours truly in the stunning city of Edinburgh.  I take care of your travel and refreshments because making radical changes in your life should also be boujee!   
+                    </p>
+                    <figure class="includes-fig">
+                        <figcaption class="sect-subtitle how-sub text-left">Includes:</figcaption>
+                        <ul class="includes-list">
+                            <li class="includes-list-item normal-text">
+                                <i class="fas fa-check-square"></i>
+                                Your travel to and from Edinburgh* and all refreshments on the day!
+                            </li>
+                            <li class="includes-list-item normal-text">
+                                <i class="fas fa-check-square"></i>
+                                DISC personality profile and report. (worth £249)
+                            </li>
+                            <li class="includes-list-item normal-text">
+                                <i class="fas fa-check-square"></i>
+                                Detailed pre session elevation exercise.
+                            </li>
+                            <li class="includes-list-item normal-text">
+                                <i class="fas fa-check-square"></i>
+                                50 min zoom strategy call
+                            </li>
+                            <li class="includes-list-item normal-text">
+                                <i class="fas fa-check-square"></i>
+                                4hrs with me face to face at Gleneagles Townhouse in Edinburgh. Leave having made the progress you thought was previously impossible.
+                            </li>
+                            <li class="includes-list-item normal-text">
+                                <i class="fas fa-check-square"></i>
+                                Final 50min zoom alchemy session.
+                            </li>
+                            <li class="includes-list-item normal-text">
+                                <i class="fas fa-check-square"></i>
+                               Following our last call you will enjoy 2 further months of whatsApp support.
+                            </li>
+                        </ul>
+                        <div class="package-price">
+                            <p class="normal-text">Investment: £1800 (payment plan available)</p>
+                            <p class="normal-text"><i>*travel capped at £100 for return journey</i></p>
+                        </div>
+                    </figure>
+                </div>
+            </div>
         </div>
     </section>
     <!-- END: signature package -->
